Uber jar package with JavaFX